# pibot

./: .gitignore  CLAUDE.md  PIML.md  README.md  Todo.md  app_patched.py  esp32-pca9685-pinout.mmd  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
.hermes/: test_smoke.py
agent/: __init__.py  __main__.py  app.py  auth.py  autonomy.py  control.py  pibotd.py  safety.py  telemetry.py  video.py
app/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/e2e/: README.md  arm.e2e.ts  autonomy.e2e.ts  connect.e2e.ts  estop.e2e.ts  provisioning.e2e.ts  teleop.e2e.ts
app/scripts/: build-sidecar.sh
app/src/: App.test.tsx  App.tsx  csp.test.ts  main.tsx  tauri-notification.d.ts  vitest.setup.ts
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/src/: commands.rs  lib.rs  state.rs  supervisor.rs  token.rs
app/src/__mocks__/: tauri-plugin-notification.ts
app/src/components/: ConfirmModal.test.tsx  ConfirmModal.tsx  ConnectBar.test.tsx  ConnectBar.tsx  EpisodeList.tsx  EstopButton.test.tsx  EstopButton.tsx  FineTunePanel.tsx  MetricsChart.tsx  OpLog.tsx  OpPreview.tsx  PolicyLinkChart.tsx  PolicyServerPanel.tsx  SessionReplay.tsx  VideoCanvas.tsx
deploy/: .deployignore  pibot-ros2-bridge.service  pibotd.service  requirements.txt  rosbridge.service
docs/: autonomy-e2e-signoff.md  hardware-arm-signoff.md  hardware-e2e-signoff.md  mission-control-v1-signoff.md  usage.md
docs/plans/: 2026-06-11-m0-foundation.md  2026-06-11-m1-connection-ssh-ops.md  2026-06-11-m10-finetune-closed-loop.md  2026-06-11-m11-multitask-and-ops.md  2026-06-11-m2-provisioning-flashing.md  2026-06-11-m3-transport-protocol-control.md  2026-06-11-m4-agent-teleop-telemetry.md  2026-06-11-m5-deploy-wireless-transports.md  2026-06-11-m6-hardening.md  2026-06-11-m7-runtime-and-pipe.md  2026-06-11-m8-camera-open-loop.md  2026-06-11-m9-transforms-and-data.md  2026-06-11-pibot-control-suite-roadmap.md  2026-06-12-m12-1-shell-sidecar-dashboard.md  2026-06-12-m12-2-teleop-estop-video.md  2026-06-12-m12-3-autonomy-policy-server.md  2026-06-12-m12-4-data-metrics-sessions.md  2026-06-12-m12-5-provisioning-hardening-release.md  2026-06-12-pibot-mission-control-roadmap.md  2026-06-13-configurable-motor-backends.md  2026-06-13-pibot-arm-control.md  2026-06-15-spec4-m-arm-1-control-surface.md  2026-06-15-spec4-m-arm-2-gripper.md  2026-06-15-spec4-m-arm-3-kinematic-model-fk.md  2026-06-15-spec4-m-arm-4-ik.md  2026-06-15-spec4-m-arm-5-trajectories-teach-playback.md  2026-06-15-spec4-m-arm-6-3d-twin.md  2026-06-15-spec4-robot-arm-implementation.md  2026-06-15-stepper-arm-sizing-spec.md  2026-06-16-spec4-m-arm-7-hardware-validation-release-hardening.md
docs/runbooks/: arm-operation.md  autonomy-bringup.md  autonomy-runtime.md  data-collection.md  e-stop.md  eeprom-recovery.md  finetune-and-serve.md  first-boot.md  flash.md  mission-control.md  nebula-overlay.md  wireless-bringup.md
docs/specs/: SPEC-1-pibot-control-suite.md  SPEC-2-pibot-autonomy-platform.md  SPEC-3-pibot-mission-control.md  SPEC-4-pibot-robot-arm.md
examples/: arm-generic-6dof.toml
firmware/: README.md
firmware/esp32_tcp_bridge/: esp32_tcp_bridge.ino
firmware/pibot_arduino/: pibot_arduino.ino  protocol.cpp
firmware/pibot_arm_stm32/: pibot_arm_stm32.ino
firmware/pibot_esp32/: pibot_esp32.ino  protocol.h  secrets.h.example
pibot/: __init__.py  __main__.py  agent_ctl.py  cli.py  config.py  discovery.py  errors.py  inventory.py  logging.py  monitor.py  tomlio.py
pibot/arm/: __init__.py  kinematics.py  manager.py  programs.py  safety.py  sizing.py  trajectory.py
pibot/connection/: __init__.py  commands.py  keys.py  runner.py  sshcmd.py  transfer.py  tunnel.py  user.py
pibot/control/: __init__.py  client.py  echo.py  oneshot.py  safety.py  sequence.py  teleop.py
pibot/deploy/: __init__.py  service.py  sync.py
pibot/mc/: __init__.py  __main__.py  app.py  auth.py  cadence.py  datasets.py  finetune.py  metrics.py  ops.py  policy_server.py  robot_link.py  routes_arm.py  routes_autonomy.py  routes_config.py  routes_control.py  routes_episodes.py  routes_finetune.py  routes_inventory.py  routes_link.py  routes_metrics.py  routes_ops.py  routes_policy_server.py  routes_record.py  routes_sessions.py  routes_video.py  server.py  sessions.py  state.py  state_dir.py  types.py  video_relay.py
pibot/ml/: __init__.py  camera.py  closed_loop.py  dataset.py  episode_logger.py  norm_stats.py  openloop.py  pibot_environment.py  pipe_check.py  record.py  state.py  transforms.py  types.py
pibot/protocol/: __init__.py  codec.py
pibot/provision/: __init__.py  clone.py  devices.py  eeprom.py  firmware.py  firstboot.py  flash.py  hardening.py  imager.py  tools.py
pibot/ros2/: __init__.py  bridge.py  convert.py
pibot/transport/: __init__.py  base.py  ble.py  i2c.py  loopback.py  responder.py  rfcomm.py  serial.py  tcp.py
scripts/: check.sh  install-flash-tools.sh
tests/: conftest.py  helpers.py  test_agent_app.py  test_agent_arm.py  test_agent_control.py  test_agent_ctl.py  test_agent_endpoints.py  test_agent_safety.py  test_agent_video.py  test_arm_geometry.py  test_arm_import_boundary.py  test_arm_kinematics.py  test_arm_manager.py  test_arm_programs.py  test_arm_protocol.py  test_arm_safety.py  test_arm_sizing.py  test_arm_trajectory.py  test_autonomy_agent.py  test_autonomy_cli.py  test_autonomy_drop_to_stop.py  test_autonomy_safety.py  test_build_transport.py  test_camera.py  test_camera_broker.py  test_ci_workflow.py  test_cli.py  test_cli_arm.py  test_cli_autonomy.py  test_cli_connection.py  test_cli_consistency.py  test_cli_m4.py  test_cli_m5.py  test_cli_provision.py  test_clone.py  test_closed_loop.py  test_cmd.py  test_config.py  test_connection_commands.py  test_dataset.py  (+72 more)
tests/e2e/: test_agent_e2e.py  test_mc_e2e.py  test_wireless_drive_e2e.py
tests/integration/: test_agent_live.py  test_arm_live.py  test_deploy_live.py  test_mc_autonomy_live.py  test_ssh_live.py
tests/recovery/: test_recovery_paths.py
tmp/: app.py
tools/: pifinder.py  pipe_check.py
(+86 files in other folders)
