[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pibot"
version = "0.0.0"
description = "PiBot Control Suite — discover, provision, control, and monitor the PiBot robot"
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",  # SerialTransport (USB / GPIO-UART / RFCOMM) — milestone M3
    "aiohttp>=3.9",   # pibotd agent HTTP/WS server + teleop/monitor WS clients — M4
    "psutil>=5.9",    # Pi health telemetry (cpu/mem/load/disk) — M4
    "pyyaml>=6.0",    # pibot play — scripted motion sequence files — M5
]

[project.optional-dependencies]
# Wireless transports whose drivers are Pi-only; the host CLI and tests use fakes,
# so these are not pulled in by default. Installed on the robot via deploy/requirements.txt.
ble = ["bleak>=0.21"]    # BleTransport (BLE, Nordic-UART style) — M5
i2c = ["smbus2>=0.4"]    # I2CTransport — M5

[project.scripts]
pibot = "pibot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pibot", "agent"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

# pifinder.py is the already-shipped tool; it carries type hints but is loaded by
# path, not as part of the package. Tighten it under mypy in M6 (see plan M6 T6.1).
[[tool.mypy.overrides]]
module = ["pifinder"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "hardware: tests that require the physical Pi/Arduino (skipped unless PIBOT_TEST_HOST is set)",
]

[tool.coverage.run]
source = ["pibot"]
omit = ["pibot/__main__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
