[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pibot"
version = "0.0.0"
description = "PiBot Control Suite — discover, provision, control, and monitor the PiBot robot"
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",  # SerialTransport (USB / GPIO-UART / RFCOMM) — milestone M3
    "aiohttp>=3.9",   # pibotd agent HTTP/WS server + teleop/monitor WS clients — M4
    "psutil>=5.9",    # Pi health telemetry (cpu/mem/load/disk) — M4
    "pyyaml>=6.0",    # pibot play — scripted motion sequence files — M5
]

[project.optional-dependencies]
# Wireless transports whose drivers are Pi-only; the host CLI and tests use fakes,
# so these are not pulled in by default. Installed on the robot via deploy/requirements.txt.
ble = ["bleak>=0.21"]    # BleTransport (BLE, Nordic-UART style) — M5
i2c = ["smbus2>=0.4"]    # I2CTransport — M5
# The on-robot VLA policy client + USB camera (SPEC-2 / M7). Heavy and pinned
# (openpi-client requires numpy<2.0); kept OUT of the core so the stdlib-light CLI/agent
# never import it. Installed only on the robot (`pip install -e '.[ml]'`).
ml = [
    "openpi-client @ git+https://github.com/Physical-Intelligence/openpi.git#subdirectory=packages/openpi-client",
    "numpy>=1.22.4,<2.0",
    "opencv-python-headless>=4.8",
]

[project.scripts]
pibot = "pibot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pibot", "agent"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

# pifinder.py is the already-shipped tool; it carries type hints but is loaded by
# path, not as part of the package. Tighten it under mypy in M6 (see plan M6 T6.1).
[[tool.mypy.overrides]]
module = ["pifinder"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
# Deselect manual-only tests by default so the standard gate runs with ZERO skips and stays
# fast/hermetic. Run them explicitly: `pytest -m hardware` (needs a real Pi via
# PIBOT_TEST_HOST) / `pytest -m toolchain` (needs arduino-cli + cores).
addopts = "-q -m 'not hardware and not toolchain'"
markers = [
    "hardware: requires the physical Pi/robot (set PIBOT_TEST_HOST; run with -m hardware)",
    "toolchain: requires the arduino-cli toolchain + cores (run with -m toolchain)",
]

[tool.coverage.run]
source = ["pibot", "agent"]
omit = ["pibot/__main__.py", "agent/__main__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
